--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapomodule/integrations-camomilla-api",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-alpha.1",
   "license": "MIT",
   "description": "This is an integration for Mapo nuxt module. This integrates camomilla cms api calls.",
   "author": "bnznamco <gabriele.baldi.01@gmail.com>",
@@ -10,9 +10,9 @@
     "access": "public"
   },
   "dependencies": {
-    "express": "^4.17.3",
-    "http-proxy-middleware": "^2.0.4",
+    "@mapomodule/integrations": "latest",
     "cookie-parser": "^1.4.6",
-    "@mapomodule/integrations" : "latest"
+    "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.4"
   }
 }
