--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@mapomodule/integrations-camomilla-api",
+  "name": "@mapomodule/mapo-integrations-camomilla",
   "version": "1.0.0-alpha.2",
   "license": "MIT",
-  "description": "This is an integration for Mapo nuxt module. This integrates camomilla cms api calls.",
+  "description": "This is an integration for Mapo nuxt module. This integrates camomilla compatibility layer.",
   "author": "bnznamco <gabriele.baldi.01@gmail.com>",
   "repository": "https://github.com/lotrekagency/mapo-integrations-camomilla",
   "main": "./module.js",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@mapomodule/integrations": "latest",
+    "@mapomodule/integrations": "1.0.0-alpha.16",
     "cookie": "^0.4.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
